--- a/admin.html
+++ b/admin.html
@@ -90,6 +90,10 @@
       <ul>
         <li><a href="index.html">Homepage</a></li>
         <li><a href="assistant.html">Assistant Chat</a></li>
+        <li><a href="training.html">Training & SOP Central</a></li>
+        <li><a href="communication-log.html">Communication Log</a></li>
+        <li><a href="monthly-report.html">GM Monthly Report</a></li>
+        <li><a href="ask-my-property.html">Ask My Property AI</a></li>
       </ul>
     </section>
 
